# mistral-app

./: .dockerignore  .gitignore  AGENTS.md  Containerfile  README.md  ROADMAP.md  chat.py  conversation.py  database.py  frontend.py  main.py  model.py  package.json  pyproject.toml  request.py  runpod-setup.sh  setup.sh
.github/workflows/: cd.yml  ci.yml  deploy-runpod.yml
.skill/create-pr/: create_pr.sh  instructions.md  skill.yaml
docs/: FRONTEND_COMPARISON.md
src/: __init__.py  main.py
src/cli/: __init__.py  chat.py  deploy.py
src/core/: __init__.py  conversation.py  database.py  model.py  runpod.py  validation.py
src/utils/: __init__.py
src/web/: __init__.py  frontend.py
src/web/api/: __init__.py  server.py
src/web/react/: .env.example  .gitignore  index.html  package.json
src/web/react/src/: App.tsx  __init__.py  main.tsx
src/web/react/src/api/: client.ts
src/web/react/src/components/: ChatInterface.tsx  ConversationList.tsx  GenerationParams.tsx  MessageBubble.tsx  ModelControls.tsx  Sidebar.tsx  index.ts
src/web/react/src/hooks/: index.ts  useConversations.ts  useGeneration.ts  useModel.ts
src/web/react/src/styles/: index.css
src/web/react/src/types/: index.ts
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_cli_e2e.py
tests/integration/: __init__.py  test_integration.py
tests/unit/: __init__.py  test_conversation.py  test_database.py  test_model.py
