[project]
name = "mistral-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch==2.4.1",
    "torchaudio==2.4.1",
    "torchvision==0.19.1",
    "transformers==4.45.2",
    "accelerate",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers" }
