[project]
name = "mistral-app"
version = "0.2.0"
description = "Mistral chat application with conversation history"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.33.1",
    "streamlit",
]

[project.optional-dependencies]
torch = [
    "torch==2.4.1",
    "torchaudio==2.4.1",
    "torchvision==0.19.1",
    "transformers==4.45.2",
    "accelerate",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
]
dev = [
    "ruff",
    "ty",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.11"

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers" }

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: marks end-to-end tests",
    "unit: marks unit tests",
    "integration: marks integration tests",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
